--- a/final-project/index.html
+++ b/final-project/index.html
@@ -40,10 +40,35 @@
 			</div>
 		</div>
 	</main>
-    <cection class="catalog" id="catalog">
+    <section class="advantages" id="advantages">
+        <div class="wrapper">
+            <div class="section_header">
+                <h2>приемущества</h2>
+            </div>
+            <div class="advantages_content">
+                <div class="item">
+                    <i class="fab fa-artstation"></i>
+                    <span>artstation</span>
+                </div>
+                <div class="item">
+                    <i class="fab fa-angellist"></i>
+                    <span>angellist</span>
+                </div>
+                <div class="item">
+                    <i class="fab fa-angrycreative"></i>
+                    <span>angrycreative</span>
+                </div>
+                <div class="item">
+                    <i class="fab fa-apper"></i>
+                    <span>apper</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="catalog" id="catalog">
     	<div class="wrapper">
     		<div class="section_header">
-    			<h2></h2>
+    			<h2>Каталог</h2>
     		</div>
     		<div class="catalog_content">
     			<div class="catalog_item">
@@ -95,7 +120,7 @@
             <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A453cbf35c70891e78535362f5ea2fcf699446ed64202a086460bc9ef058912f7&amp;width=100%25&amp;height=400&amp;lang=ru_RU&amp;scroll=false"></script>
             <div class="card">
                 <div class="card_logo">
-                    <img src="img/logo.png" alt="logo">
+                    <img src="img/img_1.png" alt="logo">
                 </div>
                 <div class="cart_text">
                 <p>leoniduhanov@gmail.com</p>
@@ -106,7 +131,7 @@
         </div>
     </section>
     <footer>
-        <p class="footer_text">&#169;Microsoft School, 2019.</p>
+        <p class="footer_text">&#169; Microsoft School, 2019.</p>
     </footer>
 
 
